<resources>
    <string name="app_name">SmartChef</string>
    <string name="chef_image_1">chef image 1</string>
    <string name="app_desc">Your Personal AI Chef: Perfect Recipes, Every time.\nAI meets your kitchen, creating magic everyday.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="app_logo">app logo</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_an_account_to_get_started">Create an account to get started. Enter your phone number below.</string>
    <string name="login_to_get_started">Login to get started. Enter your phone number below.</string>
    <string name="or">OR</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone">Phone</string>
    <string name="send_otp">SEND OTP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp_sent_to_your_phone_number_911234567890">Enter otp sent to your phone number +911234567890</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="re_enter">Re-Enter</string>
    <string name="didn_t_receive_otp">Didn\'t receive otp?</string>
    <string name="to_start_we_need_a_few_details">To start, Please provide some basic information.</string>
    <string name="name">Name</string>
    <string name="what_may_we_call_you">What may we call you?</string>
    <string name="when_were_you_born">When were you born?</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="hey_there">Hey there! 😊</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="ahh_almost_we_need_a_few_details">Almost there! We need a few details to tailor the app just for you! Even if you skip this now you can add it later.</string>
    <string name="dietary_preferences">Dietary Preferences</string>
    <string name="cuisine_preferences">Cuisine Preferences</string>
    <string name="what_s_your_usual_diet_type">What\'s your usual diet type?</string>
    <string name="last_step">Last Step 👀</string>
    <string name="what_cuisines_do_you_enjoy">What cuisines do you enjoy?</string>
    <string name="add_cuisine">Add Cuisine</string>
    <string name="cooking_motivation">Cooking Motivation</string>
    <string name="continue_">Continue</string>
    <string name="complete_">Complete</string>
    <string name="resend">Resend</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit">Edit</string>
    <string name="your_account_is_using">Your account is using:</string>
    <string name="hello_user">Hello,</string>
    <string name="try_our_models">Try Our Models</string>
    <string name="chat_with_smartchef">Chat with SmartChef</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="tf_idf_model">TF-IDF Model</string>
    <string name="bert_model">BERT Model</string>
    <string name="search_by_recipe">Search By Recipe</string>
    <string name="search_by_ingredients">Search By Ingredients</string>
    <string name="model_tf_idf_bert">Model: TF-IDF / BERT</string>
    <string name="search_by_recipe_name_ingredients">Search by Recipe Name / Ingredients</string>
    <string name="time_icon">Time Icon</string>
    <string name="servings_icon">Serving Icon</string>
    <string name="rating_icon">Rating Icon</string>
    <string name="servings_format">%d servings</string>
    <string name="enter_ingredients">Enter ingredients (comma separated)</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="results_count">Number of Results:</string>
    <string name="number_of_results">Number of Results:</string>
    <string name="increase_results">Increase results</string>
    <string name="decrease_results">Decrease results</string>
    <string name="_5">5</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition_facts">Nutritional Facts</string>
    <string name="equipment_needed">Equipments Needed</string>
    <string name="equipment_icon">Equipment Icon</string>
    <string name="instructions">Instructions</string>
    <string name="total_time">Total Time</string>
    <string name="rating">Rating</string>
    <string name="servings">Servings</string>
    <string name="info_icon">Information Icon</string>
    <string name="dash">&#160;-</string>
    <string name="beta">(beta)</string>
    <string name="alpha">(alpha)</string>
    <string name="try_pasta_or_vegan_salad">Try \'Pasta\' or \'Vegan Salad\'!</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_message">Send message</string>
    <string name="let_us_know_will_provide_you_safer_options">Let us know, will provide you safer options.</string>
    <string name="any_allergies_or_medical_conditions">Any Allergies or medical conditions</string>
    <string name="no_history">No History</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="hi_what_can_i_cook_up_fo_you_today">Hi, What can i cook up fo you today?</string>
    <string name="are_you_health_conscious">Are you health conscious?</string>
    <string name="dialog_icon">dialog icon</string>
    <string name="icon">Expandable Icon</string>
    <string name="expand_icon">Expand More Icon</string>
    <string name="theme">Theme</string>
    <string name="theme_auto_button">Theme auto button</string>
    <string name="theme_light_button">Theme light button</string>
    <string name="theme_dark_button">Theme dark button</string>
    <string name="zero">0</string>
    <string name="developer">Developer</string>
    <string name="about_developer">👋 Hi, I am Debojit Mitra, an Android Developer with 4+ years of development experience📱. I\'m passionate about creating user-friendly, high-performance apps 🚀. Currently pursuing MCA 🎓, with a focus on Android, Flutter, and AI/ML 🤖📊.</string>
    <string name="ok">OK</string>
    <string name="about_the_developer">About the developer</string>
    <string name="auto_update_check">Auto update check</string>
    <string name="notification_permission_required_for_auto_updates">Notification permission required for auto-updates</string>
    <string name="quick_suggestions">Quick Suggestions</string>
    <string name="cooking_motivation_for_today">Cooking Motivation for today</string>
</resources>