<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.RegisterFragment4">

    <TextView
        android:id="@+id/LastStepTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_step"
        android:textColor="@color/mode_inverse"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/almostDescTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="@string/ahh_almost_we_need_a_few_details"
        android:textColor="@color/mode_inverse"
        android:textSize="15sp"
        android:justificationMode="inter_word" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/dietary_preferences"
        android:textColor="@color/mode_inverse"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dietPrefTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/mode_darker"
        app:errorTextColor="@android:color/holo_red_light"
        app:errorIconTint="@android:color/holo_red_light"
        app:cursorErrorColor="@android:color/holo_red_light"
        android:hint="@string/what_s_your_usual_diet_type"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dietPrefEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_diet"
            android:drawablePadding="12dp"
            android:drawableTint="@color/mode_black"
            android:inputType="none"
            style="@style/CustomTextInputEditText"
            android:textColor="@color/mode_black"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/any_allergies_or_medical_conditions"
        android:textColor="@color/mode_inverse"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conditionsTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorTextColor="@android:color/holo_red_light"
        app:errorIconTint="@android:color/holo_red_light"
        app:cursorErrorColor="@android:color/holo_red_light"
        android:hint="@string/let_us_know_will_provide_you_safer_options"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/conditionsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_medication"
            android:drawablePadding="12dp"
            android:drawableTint="@color/mode_black"
            android:inputType="textCapWords"
            android:maxLength="40"
            style="@style/CustomTextInputEditText"
            android:textColor="@color/mode_black"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/cuisine_preferences"
        android:textColor="@color/mode_inverse"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cuisinePrefTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorTextColor="@android:color/holo_red_light"
        app:errorIconTint="@android:color/holo_red_light"
        app:cursorErrorColor="@android:color/holo_red_light"
        android:hint="@string/what_cuisines_do_you_enjoy"
        style="@style/CustomTextInputLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cuisine"
                android:layout_gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:tint="@color/mode_inverse"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cuisineChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:chipSpacingHorizontal="8dp"
                    app:singleLine="false">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/cuisineInputChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_cuisine"
                        app:chipIconEnabled="false"
                        style="@style/InputChipStyle"/>

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/healthConsciousSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:text="@string/are_you_health_conscious"
        android:textColor="@color/mode_inverse"
        android:textSize="16sp"
        style="@style/CustomMaterial3SwitchStyle"
        />



    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/cookingMotivationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:text="@string/cooking_motivation"
        android:textColor="@color/mode_inverse"
        android:textSize="16sp"
        style="@style/CustomMaterial3SwitchStyle"
        />



</LinearLayout>