<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_background"
    tools:context=".activities.SignInSignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mode_background"
        android:backgroundTint="@color/mode_background"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/appLogoImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_chef_2"
                app:tint="@color/mode_inverse" />

            <TextView
                android:id="@+id/appNameTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/mode_inverse"
                android:textSize="24sp" />

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:paddingBottom="45dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/chef_image_1"
            android:src="@drawable/ic_chef_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="20dp"
            android:textColor="@color/mode_inverse"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:alpha="0.9"
            android:textAlignment="center"
            android:text="@string/app_desc"
            android:textColor="@color/mode_inverse"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/register_signIn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button_background_dark"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/mode_inverse"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:padding="20dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/mode"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:elevation="0dp"
                app:icon="@drawable/ic_signup"
                app:iconGravity="textStart"
                app:iconTint="@color/mode"
                app:rippleColor="@color/ripple_effect_inverse" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/mode"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:padding="20dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/mode_inverse"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:elevation="0dp"
                app:icon="@drawable/ic_signin"
                app:iconGravity="textStart"
                app:iconTint="@color/mode_inverse"
                app:rippleColor="@color/ripple_effect" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/mode_inverse"
            android:textStyle="bold"
            app:backgroundTint="@color/mode"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:rippleColor="@color/ripple_effect"
            app:strokeColor="@color/mode_inverse"
            app:strokeWidth="1dp" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>